#14: Added POST endpoint to receive form images to be analyzed. Updated api documentation accordingly.
